// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiscoveryTab Rendering hides content when tab is not active 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
        "rowGap": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "paddingTop": 20,
          "rowGap": 16,
        }
      }
    >
      <SvgMock
        color="#9a6300"
        fill="currentColor"
        height={32}
        name="Danger"
        style={
          {
            "height": 32,
            "width": 32,
          }
        }
        width={32}
      />
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist-Bold",
            "fontSize": 24,
            "letterSpacing": 0,
            "lineHeight": 32,
          }
        }
      >
        An error occurred
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#4459ff1a",
          "borderColor": "#4459ff",
          "borderLeftWidth": 4,
          "borderRadius": 4,
          "flexDirection": "row",
          "padding": 12,
          "paddingLeft": 8,
        }
      }
      testID="banneralert"
    >
      <View
        style={
          {
            "marginRight": 8,
          }
        }
      >
        <SvgMock
          color="#4459ff"
          fill="currentColor"
          height={24}
          name="Info"
          style={
            {
              "height": 24,
              "width": 24,
            }
          }
          width={24}
        />
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Your information can't be shown. Don’t worry, your wallet and funds are safe.
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "backgroundColor": "#9a63001a",
          "borderColor": "#9a6300",
          "borderLeftWidth": 4,
          "borderRadius": 4,
          "flexDirection": "row",
          "padding": 12,
          "paddingLeft": 8,
        }
      }
      testID="banneralert"
    >
      <View
        style={
          {
            "marginRight": 8,
          }
        }
      >
        <SvgMock
          color="#9a6300"
          fill="currentColor"
          height={24}
          name="Danger"
          style={
            {
              "height": 24,
              "width": 24,
            }
          }
          width={24}
        />
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          If you keep getting this error,
           
          <Text
            accessibilityRole="text"
            onPress={[Function]}
            style={
              {
                "color": "#4459ff",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Save your Secret Recovery Phrase
          </Text>
           
          and re-install the app. Remember: without your Secret Recovery Phrase, you can't restore your wallet.
        </Text>
      </View>
    </View>
    <Text
      accessibilityRole="text"
      onPress={[Function]}
      style={
        {
          "color": "#4459ff",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Save your Secret Recovery Phrase
    </Text>
    <View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Error message:
        </Text>
        <TouchableOpacity
          onPress={[Function]}
          style={
            {
              "alignItems": "center",
              "columnGapgap": 4,
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <SvgMock
            color="#4459ff"
            fill="currentColor"
            height={16}
            name="Copy"
            style={
              {
                "height": 16,
                "width": 16,
              }
            }
            width={16}
          />
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#4459ff",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Copy
          </Text>
        </TouchableOpacity>
      </View>
      <View
        style={
          {
            "backgroundColor": "#ca35421a",
            "borderRadius": 8,
            "flexShrink": 1,
            "marginTop": 8,
            "padding": 16,
          }
        }
      >
        <RCTScrollView
          collapsable={false}
          handlerTag={2}
          handlerType="NativeViewGestureHandler"
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
        >
          <View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#ca3542",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              View: DiscoveryTab
TypeError: Cannot read properties of undefined (reading 'map')
            </Text>
          </View>
        </RCTScrollView>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "column",
          "flexGrow": 1,
          "justifyContent": "flex-end",
          "rowGap": 16,
        }
      }
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#121314",
            "borderRadius": 12,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#ffffff",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Contact support
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#3c4d9d0f",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Try again
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`DiscoveryTab Rendering renders DiscoveryTab component when tab is active 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "column",
        "rowGap": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "paddingTop": 20,
          "rowGap": 16,
        }
      }
    >
      <SvgMock
        color="#9a6300"
        fill="currentColor"
        height={32}
        name="Danger"
        style={
          {
            "height": 32,
            "width": 32,
          }
        }
        width={32}
      />
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist-Bold",
            "fontSize": 24,
            "letterSpacing": 0,
            "lineHeight": 32,
          }
        }
      >
        An error occurred
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#4459ff1a",
          "borderColor": "#4459ff",
          "borderLeftWidth": 4,
          "borderRadius": 4,
          "flexDirection": "row",
          "padding": 12,
          "paddingLeft": 8,
        }
      }
      testID="banneralert"
    >
      <View
        style={
          {
            "marginRight": 8,
          }
        }
      >
        <SvgMock
          color="#4459ff"
          fill="currentColor"
          height={24}
          name="Info"
          style={
            {
              "height": 24,
              "width": 24,
            }
          }
          width={24}
        />
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Your information can't be shown. Don’t worry, your wallet and funds are safe.
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "backgroundColor": "#9a63001a",
          "borderColor": "#9a6300",
          "borderLeftWidth": 4,
          "borderRadius": 4,
          "flexDirection": "row",
          "padding": 12,
          "paddingLeft": 8,
        }
      }
      testID="banneralert"
    >
      <View
        style={
          {
            "marginRight": 8,
          }
        }
      >
        <SvgMock
          color="#9a6300"
          fill="currentColor"
          height={24}
          name="Danger"
          style={
            {
              "height": 24,
              "width": 24,
            }
          }
          width={24}
        />
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          If you keep getting this error,
           
          <Text
            accessibilityRole="text"
            onPress={[Function]}
            style={
              {
                "color": "#4459ff",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Save your Secret Recovery Phrase
          </Text>
           
          and re-install the app. Remember: without your Secret Recovery Phrase, you can't restore your wallet.
        </Text>
      </View>
    </View>
    <Text
      accessibilityRole="text"
      onPress={[Function]}
      style={
        {
          "color": "#4459ff",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Save your Secret Recovery Phrase
    </Text>
    <View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Error message:
        </Text>
        <TouchableOpacity
          onPress={[Function]}
          style={
            {
              "alignItems": "center",
              "columnGapgap": 4,
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <SvgMock
            color="#4459ff"
            fill="currentColor"
            height={16}
            name="Copy"
            style={
              {
                "height": 16,
                "width": 16,
              }
            }
            width={16}
          />
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#4459ff",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Copy
          </Text>
        </TouchableOpacity>
      </View>
      <View
        style={
          {
            "backgroundColor": "#ca35421a",
            "borderRadius": 8,
            "flexShrink": 1,
            "marginTop": 8,
            "padding": 16,
          }
        }
      >
        <RCTScrollView
          collapsable={false}
          handlerTag={1}
          handlerType="NativeViewGestureHandler"
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
        >
          <View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#ca3542",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              View: DiscoveryTab
TypeError: Cannot read properties of undefined (reading 'map')
            </Text>
          </View>
        </RCTScrollView>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "column",
          "flexGrow": 1,
          "justifyContent": "flex-end",
          "rowGap": 16,
        }
      }
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#121314",
            "borderRadius": 12,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#ffffff",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Contact support
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#3c4d9d0f",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Try again
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</RNCSafeAreaView>
`;
